--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,18 @@
-%h1 Home#index
-%p Find me in app/views/home/index.html.haml
+
+%div.container
+  %div.navbar.col-s-12.example
+    = image_tag 'logo_temp.svg'
+    %button Login
+  %div.content.col-s-12
+    = image_tag 'coffees.svg'
+    %hr/
+    %p Un café es un abrazo atrapado en una taza
+    %hr/
+    %p.desc Recibe aprecio y gratitud
+    %p.desc mediante donaciones online
+    %hr/
+    %hr.half/
+    %button Crear mi perfil
+  %div.footer.col-s-12
+    %p Un perfil dedicado a recibir agradecimientos
+    %p Puedes crear una página en minutos sin conocimientos técnicos. Muestra tus datos y agradecimientos recibidos de otras personas.
