--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,134 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+}
+
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+  .example {background-color: white;}
+ }
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+  .example {background: green;}
+ }
+ 
+ /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {
+   .example {background: white;}
+   .col-1 {width: 8.33%;}
+   .col-2 {width: 16.66%;}
+   .col-3 {width: 25%;}
+   .col-4 {width: 33.33%;}
+   .col-5 {width: 41.66%;}
+   .col-6 {width: 50%;}
+   .col-7 {width: 58.33%;}
+   .col-8 {width: 66.66%;}
+   .col-9 {width: 75%;}
+   .col-10 {width: 83.33%;}
+   .col-11 {width: 91.66%;}
+   .col-12 {width: 100%;}
+ }
+ 
+ /* Large devices (laptops/desktops, 992px and up) */
+ @media only screen and (min-width: 992px) {
+  .example {background: white;}
+ }
+ 
+ /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {
+  .example {background: white;}
+ } 
+
+ .example {
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  font-family: happyMonkey;
+}
+
+.navbar {
+  padding-top: 11px;
+  padding-left: 20px;
+  padding-right: 35px;
+  max-height: 50px;
+  button {
+    background-color: white;
+    font-family: roboto;
+    border: none;
+    color: black;
+    float: right;
+    text-decoration: none;
+    font-size: 18px;
+  }
+  // background-color: #FFFFFF;
+}
+
+.content {
+  padding-top: 24.5px;
+  background-color: rgb(250, 250, 250);
+  color: #363636;
+  font-size: 26px;
+  text-align: center;
+  padding-bottom: 100px;
+  button {
+    font-family: roboto-regular;
+    border-radius: 5px;
+    background-color: #EE4380;
+    border: none;
+    color: white;
+    padding: 9px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+  }
+}
+
+.footer {
+  background-color: #EE4380;
+  color: #FFFFFF;
+}
+
+.desc {
+  font-family: roboto;
+  color: #8F8F8F;
+  font-size: 20px;
+}
+
+svg {
+  width: 161px;
+  height: 193.5px;
+}
+
+hr {
+  padding-top: 28px;
+  border: none;
+}
+.half {
+  padding-top: 14px;
+}
