--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -79,13 +79,18 @@
         // padding-right: 35px;
       }
       a {
+        border-style: solid;
         margin-right: 27px;
         float: right;
-        padding: 16px;
+        padding: 14px;
         font-family: roboto;
         color: black;
         text-align: center;
         text-decoration: none;
+        border-color: #EE4380;
+        border-top: 0px;
+        border-left: 0px;
+        border-right: 0px;
       }
     }
 }
@@ -103,7 +108,7 @@
   font-size: 26px;
   text-align: center;
   padding-bottom: 100px;
-  .button {
+  a {
     font-family: roboto-regular;
     border-radius: 5px;
     background-color: #EE4380;
@@ -123,14 +128,27 @@
 }
 
 .footer {
+  font-size: 25px;
+  padding: 25px;
+  padding-top: 35px;
+  // padding-right: 50px;
   background-color: #EE4380;
   color: #FFFFFF;
+  hr {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
 .desc {
   font-family: roboto;
   color: #8F8F8F;
   font-size: 20px;
+
+}
+
+.white {
+  color: white;
 }
 
 svg {
@@ -138,10 +156,19 @@ svg {
   height: 193.5px;
 }
 
-hr {
+.padding {
   padding-top: 28px;
   border: none;
 }
 .half {
   padding-top: 14px;
 }
+.line-separator{
+  margin-top: 10px;
+  margin-bottom: 20px;
+  height:4px;
+  background:#ffffff;
+  border-bottom:1px solid #ececec;
+  
+  }
+  
