--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,6 +21,9 @@
   width: 100%;
 }
 
+a {
+}
+
  /* Extra small devices (phones, 600px and down) */
  @media only screen and (max-width: 600px) {
   .example {background-color: white;}
@@ -108,19 +111,21 @@
   font-size: 26px;
   text-align: center;
   padding-bottom: 100px;
-  a {
+  .btn {
     font-family: roboto-regular;
     border-radius: 5px;
-    background-color: #EE4380;
+    background-color: #ee4380;
     border: none;
-    color: white;
     padding: 9px;
     padding-left: 15px;
     padding-right: 15px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 18px;
+    a {
+      color: white;
+      text-decoration: none;
+    }
   }
   // a:hover {
   //   background-color: rgb(224, 90, 137);
@@ -151,6 +156,14 @@
   color: white;
 }
 
+.black {
+  color: rgb(51, 51, 51);
+  a {
+    color: rgb(92, 40, 62);
+    text-decoration: none;
+  }
+}
+
 svg {
   width: 161px;
   height: 193.5px;
@@ -162,6 +175,7 @@ svg {
 }
 .half {
   padding-top: 14px;
+  border: none;
 }
 .line-separator{
   margin-top: 10px;
@@ -169,6 +183,21 @@ svg {
   height:4px;
   background:#ffffff;
   border-bottom:1px solid #ececec;
-  
-  }
-  
+}
+
+form input.button {
+  color: white;
+  font-family: roboto-regular;
+  border-radius: 5px;
+  background-color: #ee4380;
+  border: none;
+  padding: 9px;
+  padding-left: 15px;
+  padding-right: 15px;
+  text-align: center;
+  display: inline-block;
+}
+
+input.button:hover {
+  background-color: #ff5590;
+}
