--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,11 @@
   %div.navbar.col-s-12.example
     %ul
       %li= image_tag('logo_temp.svg')
-      %li= link_to "Log in", new_session_path(resource_name)
+      -if user_signed_in?
+        %li= link_to "Log out", destroy_user_session_path(user_session), method: :delete
+      -else
+        %li= link_to "Log in", new_user_session_path
+
   %div.content.col-s-12
     = image_tag 'coffees.svg'
     %hr.padding/
@@ -12,11 +16,12 @@
     %p.desc mediante donaciones online
     %hr.padding/
     %hr.padding/
-    .button= link_to "Crear mi perfil", new_registration_path(resource_name)
+    .btn= link_to "Crear mi perfil", new_user_registration_path
   %div.footer
     %p Un perfil dedicado a recibir agradecimientos
     -# %hr/
     %div.line-separator
     %p.desc.white Puedes crear una página en minutos sin conocimientos técnicos. Muestra tus datos y agradecimientos recibidos de otras personas.
+    %p #{@message}
     %hr.padding/
     = image_tag "cellphones.png"
