Vistas del Perfil 'Settings', 'Images' y 'Accounts' añadidas. CSS Base (WIP)

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -24,4 +24,4 @@
     %p.desc.white Puedes crear una página en minutos sin conocimientos técnicos. Muestra tus datos y agradecimientos recibidos de otras personas.
     %p #{@message}
     %hr.padding/
-    = image_tag "cellphones.png"
+    .center= image_tag "cellphones.png"
