--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,36 @@
   font-family: roboto-regular;
   src: url(Roboto-Regular.ttf);
 }
+
+@font-face {
+  font-family: roboto-medium;
+  src: url(Roboto-Medium.ttf);
+}
+
+.alert-error {
+  margin-top: 30px;
+  font-size: 20px;
+  font-family: roboto; 
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
+  text-align: center;
+}
+
+.alert-alert {
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
+  text-align: center; }
+
+.alert-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #468847;
+  text-align: center; }
+
+.alert-notice {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #468847;
+  text-align: center; }
