--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 .admin-navbar{
-  background-color: #EE4380;
+  background-color: #EA5F91;
   min-height: 56px;
   color: white;
 }
@@ -23,7 +23,7 @@
     }
   }
   .admin-content{
-    background-color: #F4F6F8;
+    background-color: #DFE4E8;
     color: #212B35;
     width: 100%;
   }
