--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -163,8 +163,7 @@ a {
 .black {
   color: rgb(51, 51, 51);
   a {
-    color: rgb(92, 40, 62);
-    text-decoration: none;
+    color: palevioletred;
   }
 }
 
