--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,7 +34,7 @@
   src: url(Roboto-Medium.ttf);
 }
 
-.alert-error {
+.alert-error, #error_explanation {
   margin-top: 30px;
   font-size: 20px;
   font-family: roboto; 
