--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 %div.container 
   %div.content.col-s-12
     %div.footer
-      %h2 Sign up
+      %h5 Registro de usuario
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
       %hr.half/
@@ -22,10 +22,6 @@
         = f.label :password_confirmation
         %br/
         = f.password_field :password_confirmation, autocomplete: "new-password"
-      - if flash.alert
-        %div.alert-error
-          %ul
-            %li #{flash.alert}
       %hr.padding/  
       .actions
         = f.submit 'Registrar', :class => "button"
