--- a/app/views/my_profile/index.html.haml
+++ b/app/views/my_profile/index.html.haml
@@ -28,12 +28,18 @@
           = link_to "Cuentas", my_profile_accounts_path
 
     -# Centro de la Vista --------------------------------------------------------------
-
-    -# Header con el título.
     %div.admin-content
+
+      -# Header con el título.
       %div.header
+        -# Estas dos líneas al inicio del header generarán un botón de retorno.
+        = link_to image_tag('ico-return.svg', alt: 'Icon'), my_profile_path
+        %a.returnbtn(href=my_profile_path) Regresar a la vista anterior
+        -# El título tiene estilos automáticos gracias a la clase .header
         %h1 ¡Bienvenid@, #{@user}!
+        -# Si es necesario, se puede poner un botón rosa al lado derecho del header.
         %a.pinkbtn .pinkbtn
+        -# Se puede poner un div.separator para generar una pequeña línea horizontal.
         %div.separator
 
       -# Contenido central. Automáticamente colocará elementos en flex-row
@@ -72,7 +78,26 @@
             %p.card-text .card-text
             %input
 
-            -# -------------------------------------------------------------------------
+      -# Usando otro div con la clase .info creará un nuevo row de cards!
+      %div.info
+        -# Ponerle la clase .transparent a un card adaptará esta para hacer descripciones.
+        %div.card.transparent
+          %div.card-body
+            %h5.card-title Este card usa la clase .transparent
+            %p.card-text Ahora se pueden hacer descripciones geniales.
+            %p.card-text Tres tristes tigres comían trigo en un trigal.
+        -# Otros cards de muestra.
+        %div.card
+          %div.card-body
+            %h5.card-title .card-title
+            %p.card-text .card-text
+            %input
+        %div.card
+          %div.card-body
+            %h5.card-title .card-title
+            %p.card-text .card-text
+            %input
+      -# -------------------------------------------------------------------------
 
       %div.footer
         %div.separator
