--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -146,6 +146,9 @@ div.card {
     margin-left: -30px;
     margin-right: 20px;
   }
+  &:hover {
+    // background-color: rgb(233, 238, 243);
+  }
   .nested-section {
     display: flex;
   }
@@ -212,3 +215,4 @@ div.separator{
   background:#DFE4E8;
   // border-bottom:1px solid #ececec;
 }
+
