--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,14 +36,14 @@
 
 .alert-error, #error_explanation {
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 17.5px;
   font-family: roboto; 
   background-color: #f2dede;
   border-color: #eed3d7;
   color: #b94a48;
   text-align: center;
   h2 {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -60,7 +60,18 @@
   text-align: center; }
 
 .alert-notice {
+  margin-top: 30px;
+  font-size: 17.5px;
+  font-family: roboto; 
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #468847;
-  text-align: center; }
+  text-align: center; 
+  h2 {
+    font-size: 18px;
+  }
+}
+
+  br {
+    padding: 0px;
+  }
