--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -167,6 +167,13 @@ div.card {
         padding-top: 8px;
         padding-bottom: 8px;
         border-radius: 100%;
+        &:hover {
+          cursor: pointer;
+          background-color: rgb(255, 236, 243);
+        }
+        &:active {
+          background-color: #EE4380;
+        }
       }
     }
   }
