--- a/app/views/my_profile/new_image.html.haml
+++ b/app/views/my_profile/new_image.html.haml
@@ -35,8 +35,7 @@
         %div.card.transparent
           %div.card-body
             %h5.card-title Imagen del carousel
-            %p.card-text Agregar imagen que se mostrará en el 
-            %p.card-text carousel del perfil público
+            %p.card-text Agregar imagen que se mostrará en el carousel del perfil público
         %div.card
           %div.card-body
             %div.card-title Imagen principal
@@ -46,8 +45,7 @@
         %div.card.transparent
           %div.card-body
             %h5.card-title Datos de la imagen
-            %p.card-text Parámetro de publicación y leyenda de
-            %p.card-text la imagen a mostrarse en el carousel
+            %p.card-text Parámetro de publicación y leyenda de la imagen a mostrarse en el carousel
         %div.card
           %div.card-body
             %h5.card-title Subtítulo
