--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -158,7 +158,7 @@ div.card {
       flex-direction: row;
       justify-content: center;
       text-align: center;
-      button {
+      button, input {
         margin-left: 10px;
         background-color: transparent;
         border-style: solid;
@@ -170,6 +170,7 @@ div.card {
         padding-top: 8px;
         padding-bottom: 8px;
         border-radius: 100%;
+        max-width: 10px;
         &:hover {
           cursor: pointer;
           background-color: rgb(255, 236, 243);
@@ -260,4 +261,13 @@ div.checkbox {
     margin-right: 10px;
     width: 0%;
   }
+}
+
+input[type='number'] {
+  -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
