--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -166,11 +166,12 @@ div.card {
         border-width: 1px;
         font-family: happyMonkey;
         font-size: 16px;
-        padding: 12.5px;
+        padding: 1px;
         padding-top: 8px;
         padding-bottom: 8px;
         border-radius: 100%;
-        max-width: 10px;
+        text-align: center;
+        max-width: 35px;
         &:hover {
           cursor: pointer;
           background-color: rgb(255, 236, 243);
