--- a/app/views/my_profile/new_account.html.haml
+++ b/app/views/my_profile/new_account.html.haml
@@ -36,20 +36,20 @@
         %div.card
           %div.card-body
             %h5.card-title Entidad
-            %input
+            %input{placeholder: "entity"}
           %div.card-body
             %h5.card-title Email
-            %input
+            %input{placeholder: "email"}
           %div.nested-section
             %div.card-body
               %h5.card-title Nro de Cuenta
-              %input
+              %input{placeholder: "account_number"}
             %div.card-body
               %h5.card-title RIF o Cédula
-              %input
+              %input{placeholder: "rif_ci"}
             %div.card-body
               %h5.card-title Tipo de Cuenta
-              %input
+              %input{placeholder: "account_type"}
 
       %div.footer
         %div.separator
