--- a/app/views/my_profile/accounts.html.haml
+++ b/app/views/my_profile/accounts.html.haml
@@ -31,6 +31,56 @@
         %a.pinkbtn(href=my_profile_new_account_path) Agregar
         %div.separator
 
+      %div.info
+        %div.card
+          %div.card-header
+            %div.section Cuentas
+          %div.card-list
+            %ul
+              %li.lpadding Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.lpadding Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.lpadding Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.lpadding Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+
       %div.footer
         %div.separator
         -# %a.pinkbtn .pinkbtn
