--- a/app/views/my_profile/images.html.haml
+++ b/app/views/my_profile/images.html.haml
@@ -30,7 +30,61 @@
         %h1 Carousel de Imágenes
         %a.pinkbtn(href=my_profile_new_image_path) Agregar
         %div.separator
-
+      
+      %div.info
+        %div.card
+          %div.card-header
+            %div.section Imágenes
+          %div.card-list
+            %ul
+              %li.imgpadding Image
+              %li Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.imgpadding Image
+              %li Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.imgpadding Image
+              %li Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+            %ul
+              %li.imgpadding Image
+              %li Esto es una observación de la venta. Esto no es ninguna observación de ninguna venta.
+              %div.options
+                = image_tag 'ico-options.svg', alt: 'options', class: ''
+                %div.options-content
+                  %span 
+                    Editar
+                    = image_tag 'ico-edit', alt: 'e', height: '10px', width: '12px'
+                  %span 
+                    Eliminar
+                    = image_tag 'ico-delete', alt: 'd'
+      
       %div.footer
         %div.separator
         -# %a.pinkbtn .pinkbtn
