Fix para form de Profile

--- a/app/views/my_profile/edit.html.haml
+++ b/app/views/my_profile/edit.html.haml
@@ -67,7 +67,7 @@
             -# Contenido 1
             %div.card-body
               %h5.card-title Monto de un café
-              = f.text_field :coffe_price, placeholder: "coffe_price"
+              = f.text_field :coffee_price, placeholder: "coffee_price", step: "any"
             %div.card-body
               %h5.card-title Símbolo de la moneda
               = f.text_field :monetary_symbol, placeholder: "monetary_symbol"
