--- a/app/views/my_profile/images.html.haml
+++ b/app/views/my_profile/images.html.haml
@@ -12,8 +12,8 @@
     %div.admin-sidebar
       %ul
         %li
-          = link_to image_tag('ico-home.svg', alt: 'Icon'), my_profile_path
-          = link_to "Home", my_profile_path
+          = link_to image_tag('ico-home.svg', alt: 'Icon'), profile_path
+          = link_to "Home", profile_path
         %li
           = link_to image_tag('ico-profile.svg', alt: 'Icon'), my_profile_settings_path
           = link_to "Perfil", my_profile_settings_path
